--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,18 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.3.7.v20160115</version>
+                <configuration>
+                    <webApp>
+                        <jettyEnvXml>src/main/resources/jetty-ds.xml</jettyEnvXml>
+                    </webApp>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>1.4.191</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
