--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,15 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
