--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,15 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>htmlEscapeFilter</filter-name>
+        <filter-class>com.clackjones.cymraeg.filter.EscapeHtmlInputFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>htmlEscapeFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/gwasanaeth-servlet.xml</param-value>
