Add resource ref for database to web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,13 @@
         <servlet-name>gwasanaeth</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    
+    <resource-ref>
+      <description>DB Connection</description>
+      <res-ref-name>GwasanaethauDB</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+    </resource-ref>
 
     <filter>
         <filter-name>htmlEscapeFilter</filter-name>
