--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <spring.version>4.2.5.RELEASE</spring.version>
         <spring.security.version>4.1.1.RELEASE</spring.security.version>
         <apache.tiles.version>3.0.5</apache.tiles.version>
+        <logback.version>1.2.3</logback.version>
+        <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
     <dependencies>
@@ -144,8 +146,31 @@
             <artifactId>mail</artifactId>
             <version>1.4.7</version>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.12</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
