--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <spring.version>4.2.5.RELEASE</spring.version>
-        <spring.security.version>4.1.1.RELEASE</spring.security.version>
+        <spring.version>4.2.3.RELEASE</spring.version>
         <apache.tiles.version>3.0.5</apache.tiles.version>
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -63,19 +62,19 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>${spring.security.version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>${spring.security.version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
-            <version>${spring.security.version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
