--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <apache.tiles.version>3.0.5</apache.tiles.version>
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <hibernate.version>5.2.13.Final</hibernate.version>
+        <hibernate.validator.version>6.0.7.Final</hibernate.validator.version>
     </properties>
 
     <dependencies>
@@ -105,13 +107,13 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.0.0.Final</version>
+            <version>${hibernate.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.0.0.Final</version>
+            <version>${hibernate.validator.version}</version>
         </dependency>
 
         <dependency>
