--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,14 +16,14 @@
       <res-auth>Container</res-auth>
     </resource-ref>
 
-    <filter>
+    <!--<filter>
         <filter-name>htmlEscapeFilter</filter-name>
         <filter-class>com.clackjones.cymraeg.filter.EscapeHtmlInputFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>htmlEscapeFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 
     <filter>
         <filter-name>hiddenHttpMethodFilter</filter-name>
