--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,14 @@
             <version>0.30</version>
         </dependency>
 
+        <!-- testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.196</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
