Enable Spring Integration testing in GwasanaethDaoTest
Add test data for GwasanaethDaoTest

Remove quotes in tables and column names and finish GwasanaethDaoTest
for first letters

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/gwasanaeth-servlet.xml,
+            classpath:META-INF/annotated-beans.xml,
             classpath:META-INF/heroku-datasource.xml,
             classpath:META-INF/jpa-context.xml,
             classpath:META-INF/liquibase-context.xml,
