--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,13 @@
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.jsimone</groupId>
+            <artifactId>webapp-runner</artifactId>
+            <version>8.5.27.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
