--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <hibernate.version>5.2.13.Final</hibernate.version>
         <hibernate.validator.version>6.0.7.Final</hibernate.validator.version>
+        <webflow.version>2.5.0.RELEASE</webflow.version>
     </properties>
 
     <dependencies>
@@ -36,6 +37,13 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-webflow</artifactId>
+            <version>${webflow.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
