--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,13 @@
             <version>0.2.7</version>
         </dependency>
 
+        <!-- for circular distance -->
+        <dependency>
+            <groupId>org.gavaghan</groupId>
+            <artifactId>geodesy</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
         <!-- testing -->
         <dependency>
             <groupId>org.springframework</groupId>
