Fix httpd.conf reverse proxy

--- a/conf/find_my_lingo_httpd.conf
+++ b/conf/find_my_lingo_httpd.conf
@@ -8,10 +8,10 @@
         RewriteRule ^/static/(.+)$ /static/$1
 
         ProxyRequests Off
-        ProxyPass / http://localhost:8080
-        ProxyPassReverse / http://localhost:8080
+        ProxyPass / http://localhost:8080/
+        ProxyPassReverse / http://localhost:8080/
 
-        <Location "/webapps">
+        <Location "/">
                 Order allow,deny
                 Allow from all
         </Location>
