Tidy up httd conf and fix SE linux permissions

--- a/findmylingo-webapp/conf/find_my_lingo_httpd.conf
+++ b/findmylingo-webapp/conf/find_my_lingo_httpd.conf
@@ -1,18 +1,13 @@
 <VirtualHost *:80>
         DocumentRoot /var/www/findmylingo.local
         ServerName findmylingo.local
-        # Other Apache config directives, logs etc.
 
-        # serve static content from /static/
-        RewriteEngine On
-        RewriteRule ^/static/(.+)$ /static/$1
-
-        ProxyRequests Off
+        ProxyPass /static/ !
         ProxyPass / http://localhost:8080/
         ProxyPassReverse / http://localhost:8080/
 
-        <Location "/">
-                Order allow,deny
-                Allow from all
-        </Location>
+        Alias /static /var/www/findmylingo.local/static
+        <Directory "/var/www/findmylingo.local/static">
+                Require all granted
+        </Directory>
 </VirtualHost>
